Fix T52209: New Depsgraph - animated follow curve constraint sometimes freaks out when the curve has a parent